Updates library after content sorting

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "DiscMan-mdr",
+  "name": "DiscMan-mdrlolibnbrniebgjmdr",
   "version": "0.1.0",
   "main": "main.js",
   "description": "A powerful & compact music player for macOS",
