--- a/package.json
+++ b/package.json
@@ -18,13 +18,11 @@
   "author": "Rémi de Juvigny",
   "license": "CC-BY",
   "devDependencies": {
-    "electron": "^1.6.6",
+    "electron": "^2.0.0-beta.6",
+    "electron-window-state": "^4.1.1",
     "gulp": "^3.9.1",
     "gulp-exec": "^3.0.1",
     "gulp-plumber": "^1.2.0",
     "gulp-sass": "^3.2.1"
-  },
-  "dependencies": {
-    "electron-window-state": "^4.1.1"
   }
 }
