--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "electron": "^2.0.0-beta.6",
     "electron-window-state": "^4.1.1",
     "gulp": "^3.9.1",
-    "gulp-exec": "^3.0.1",
+    "gulp-babel": "^7.0.1",
+    "gulp-concat": "^2.6.1",
     "gulp-plumber": "^1.2.0",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.2.1"
   }
 }
