--- a/package.json
+++ b/package.json
@@ -17,14 +17,17 @@
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "bundle": "webpack --mode=development",
-    "start": "webpack --mode=development && LANG=en_US.UTF-8 electron ."
+    "bundle": "webpack --mode=development --watch",
+    "start": "LANG=en_US.UTF-8 electron .",
+    "dev": "concurrently --kill-others 'npm run bundle' 'npm run start'"
   },
   "author": "Rémi de Juvigny",
   "license": "MIT",
   "devDependencies": {
+    "concurrently": "^3.5.1",
     "css-loader": "^0.28.11",
     "electron": "^2.0.0-beta.6",
+    "electron-reload": "^1.2.2",
     "electron-window-state": "^4.1.1",
     "file-loader": "^1.1.11",
     "image-webpack-loader": "^4.2.0",
