--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
     "style-loader": "^0.20.3",
     "webpack": "^4.4.1",
     "webpack-cli": "^2.0.13"
+  },
+  "dependencies": {
+    "music-metadata": "^0.9.12"
   }
 }
